--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.application.name=account-spring-aop
 
+server.port=8080
+
+#Turn off the banner for spring boot
+spring.main.banner-mode=off
+
+#Change logging level to warn
+logging.level.root=warn
